--- a/assets/css/hotspot.css
+++ b/assets/css/hotspot.css
@@ -141,7 +141,7 @@ main {
   flex-wrap: wrap;
 }
 .category-selected p {
-  margin: 0 15px 0 0;
+  margin: 0 15px 15px 15px;
   padding: 5px 10px;
   border-radius: 10px;
   background: rgba(165, 42, 42, 0.8);
@@ -152,6 +152,8 @@ main {
 .container {
   margin-top: 50px;
   min-height: 200px;
+}
+#items-container {
   display: grid;
   grid-template-columns: 1fr 1fr;
   grid-gap: 40px;
@@ -318,6 +320,31 @@ main {
   align-items: center;
   text-align: center;
 }
+#page-numbers {
+  margin-top: 25px;
+  width: 100%;
+  min-height: 20px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-wrap: wrap;
+  text-align: center;
+}
+#page-numbers p {
+  background: var(--first-color);
+  color: white;
+  text-align: center;
+  min-width: 40px;
+  margin: 5px 10px;
+  font-weight: 600;
+  border-radius: 5px;
+  cursor: pointer;
+  transition: 0.3s ease;
+}
+#page-numbers p:hover {
+  background: rgb(114, 27, 27);
+  color: black;
+}
 footer {
   position: relative;
   width: 100%;
@@ -330,7 +357,7 @@ footer {
   font-size: 1.3rem;
 }
 @media only screen and (max-width: 1024px) {
-  .container {
+  #items-container {
     grid-template-columns: 1fr;
   }
   .popup {
